<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title" />
    <item
        android:id="@+id/fragment_practice"
        android:icon="@drawable/ic_practice"
        android:title="@string/practice" />
    <item
        android:id="@+id/fragment_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/Camera" />
    <item
        android:id="@+id/fragment_analytics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/Analytics_Title" />
    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title" />
</menu>